egw_fw.css
/* ... */
/* Toggle Sidebar*/
#egw_fw_sidebar #egw_fw_toggler {
	display: block;
	width: 28px;
	height: 30px;
	position: relative;
	z-index: 1;
	margin-top: 0;
	margin-bottom: -30px;
	float: right;
	margin-right: 5px;
}
#egw_fw_sidebar #egw_fw_toggler span {
	background-color: transparent;
	position: relative;
	display: block;
	width: 100%;
	height: 5px;
	backface-visibility: hidden;
	border-radius: 2px;
	top: 11px;
	margin-left: 15px;
}
#egw_fw_sidebar #egw_fw_toggler span:before {
	transition-duration: 0.7s;
	-webkit-transition-duration: 0.7s;
	-moz-transition-duration: 0.7s;
	transform: rotate(145deg) translate(8px, -2px);
	-ms-transform: rotate(145deg) translate(8px, -2px);
	-moz-transform: rotate(145deg) translate(8px, -2px);
	-webkit-transform: rotate(145deg) translate(8px, -2px);
	background-color: black;
}
#egw_fw_sidebar #egw_fw_toggler span:before,
#egw_fw_sidebar #egw_fw_toggler span:after {
	content: "";
	position: absolute;
	left: 0;
	top: -9px;
	width: 12px;
	height: 3px;
	background-color:black;
	backface-visibility: hidden;
	border-radius: 2px;
}
#egw_fw_sidebar #egw_fw_toggler span:after {
	top: 9px;
	transition-duration: 0.7s;
	-moz-transition-duration: 0.7s;
	-webkit-transition-duration: 0.7s;
	transform: rotate(-145deg) translate(8px, 2px);
	-ms-transform: rotate(-145deg) translate(8px, 2px);
	-moz-transform: rotate(-145deg) translate(8px, 2px);
	-webkit-transform: rotate(-145deg) translate(8px, 2px);
	background-color: black;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler {
	margin: 1px auto 4px;
	float: none;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler span {
	background-color: #E0E0E0;
	transition: all 0.3s;
	margin:0;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler span:before,
#egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler span:after {
	transform: none;
	-ms-transform: none;
	-moz-transform: none;
	-webkit-transform: none;
	width: 100%;
	height: 5px;
	background-color: #E0E0E0;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler:hover span {
	background-color: black;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler:hover span:before {
	background-color: black;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn #egw_fw_toggler:hover span:after {
	background-color: black;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn .egw_fw_ui_sidemenu_entry_content {
	display: none !important;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn .egw_fw_ui_sidemenu_entry_header_active {
	width: auto !important;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn .egw_fw_ui_sidemenu_entry_header {
	width: 50px;
	height: 27px;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn .egw_fw_ui_sidemenu_entry_header h1 {
	visibility: hidden;
}
#egw_fw_sidebar .egw_fw_sidebar_toggleOn .egw_fw_ui_sidemenu_entry_header img {
	margin: 4px auto 0px !important;
	padding: 0 !important;
	float: none !important;
	display: block !important;
}

/*	############################################################
	#					 LOADING PROMPT						  #
	############################################################*/

@keyframes loading-prompt-spinner {
	from {transform: rotateZ(0deg);}
	to {transform: rotateZ(360deg);}
}

.egw-loading-prompt-container::before {
	opacity:.3;
	content:"";
	background: #aaaaaa url("images/ui-bg_flat_0_aaaaaa_40x100.png") 50% 50% repeat-x;
	width: 100%;
	height: 100%;
	position: absolute;
	z-index: 999;
}
.egw-loading-prompt-container .egw-loading-prompt-spinner-msg {
	position: absolute;
	left: 48%;
	top: 48%;
	z-index: 999;
	text-shadow: 4px 4px 7px #679FD2;
    color: #0B5FA4;
	margin-left: -10px;
    margin-top: 52px;
}
.egw-loading-prompt-container .egw-loading-prompt-spinner-animator {
	width: 38px;
	height: 38px;
	position: absolute;
	left: 48%;
	top: 48%;
	z-index: 999;
	background-position: 3px 3px;
	opacity: 1;
	border-radius: 50%;
	background-repeat: no-repeat;
	vertical-align: middle;
	border: 5px solid;
	background: #FBC200;
    border: 6px rgb(103, 159, 210) solid;
    border-top: 6px #0C5DA5 solid;
    border-radius: 50%;
    -webkit-animation: loading-prompt-spinner 1.2s infinite linear;
    animation: loading-prompt-spinner 1.2s infinite linear;
}

@keyframes loading-prompt-horizental {
	0% { transform: translate(-52.5px,-7.5px); }
	100% { transform: translate(38.5px,-7.5px); }
}
.egw-loading-prompt-container .egw-loading-prompt-horizental-animator::after {
	content: '';
    position: absolute;
    top:48%;
    left: 50%;
    width: 15px;
    height: 15px;
    z-index: 999;
    border-radius: 30%;
    background: #FBC200;
    animation-name: loading-prompt-horizental;
    animation-duration: 1.5s;
    animation-direction: alternate;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;
}
.egw-loading-prompt-container .egw-loading-prompt-horizental-msg {
	position: absolute;
	left: 50%;
    top: 50%;
	z-index: 999;
	text-shadow: 4px 4px 7px #679FD2;
    color: #0B5FA4;
	margin-left: -35px;
}
.egw-loading-prompt-container .egw-loading-prompt-horizental-animator::before {
	content: '';
    position: absolute;
    top: 48%;
    left: 50%;
    z-index: 999;
    width: 100px;
    border-radius: 5px;
    border: solid 10px  #679FD2;
    transform: translate(-50%, -50%);
}

/*################################## END OF LOADING PROMPT #############*/

